Fix some overflows

--- a/flatron.css
+++ b/flatron.css
@@ -33,6 +33,10 @@
 /*---
 ----- No Category ---*/
 
+html {
+    background: #333;
+}
+
 .tooltipster-default {
     border-radius: 0;
     background: #eee;
@@ -49,10 +53,8 @@
 /*---
 ----- Typography ---*/
 
-/*
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300);
-*/
 
 .link .title,
 .alert-h1,
@@ -210,7 +212,7 @@ a:hover,
 .pagename {
     padding: 0;
     margin: 0;
-    width: 100vw;
+    width: 95vw;
     text-align: center;
     position: absolute;
     left: 0;
